Release 0.20.2 ready (#588)
#583 #574 #564 #577 #585 #586 done

---------
Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: Matti Tahvonen <matti@vaadin.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: vaadin-miki <vaadin-miki@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Jean-Christophe Gueriaud <51313578+jcgueriaud1@users.noreply.github.com>
Co-authored-by: Jean-Christophe Gueriaud <jean-christophe@vaadin.com>
Co-authored-by: Sebastian Penttinen <31658152+sebastianpenttinen@users.noreply.github.com>
Co-authored-by: sebastianPenttinen <sebastian.penttinen@beanbakers.fi>
Co-authored-by: Sascha Ißbrücker <sascha.issbruecker@googlemail.com>
Co-authored-by: Matti Tahvonen <matti@vaadin.com>